# court_of_justice_schema_bot

./: Cargo.toml  Procfile
deployments/docker/dev/: Dockerfile  docker-compose.example.yml
src/: http_client.rs  loader.rs  loader.rs.old  main.rs  operations.rs  redis_conn.rs
src/operations/: get_document.rs  get_page.rs  get_page_count.rs  get_years.rs
