[package]
name = "court_of_justice"
version = "0.1.0"
authors = ["andrejfilipov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
nano-get = "0.2.3"
redis = "0.15.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3