[package]
name = "court_of_justice"
version = "0.1.0"
authors = ["andrejfilipov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4"
encoding = "0.2"
scraper = "0.11.0"
redis = "0.15.1"
regex = "1.3.4"
url = "2.1.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3